--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "eflyax/facebook-pixel",
+  "name": "eflyax/FacebookPixel",
   "type": "library",
   "description": "Facebook pixel for Nette",
   "license": "BSD-3-Clause",
