Added missing tests for events

--- a/tests/app/config/config.neon
+++ b/tests/app/config/config.neon
@@ -12,6 +12,7 @@ session:
 
 services:
     router: App\Router\RouterFactory::createRouter
+    - App\Model\ProductRepository
 
 facebookPixel:
     id: '111111111111111'
